# paralela-hw03

./: CMakeLists.txt  ShareDynamicVectorAdd.cu  ShareStaticVectorAdd.cu  VectorAdd.cu  hello.cu  hello01.cu
ex01/: hello.cu
ex02/: hello.cu  hello01.cu
ex03/: ShareDynamicVectorAdd.cu  ShareStaticVectorAdd.cu  VectorAdd.cu
